# ocr-perfect

./: .firebaserc  .gitignore  CLAUDE.md  PLAN.md  README.md  RESUMEN_PROYECTOS.md  firestore.indexes.json  firestore.rules  pyproject.toml
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: firebase.py
backend/app/models/: schemas.py
backend/app/routes/: health.py  jobs.py
backend/app/services/: firestore.py  pubsub.py  storage.py
config/: cloud.yaml  default.yaml  fast.yaml  high_quality.yaml
docs/: BACKEND_FRONTEND_PLAN.md  DEPLOYMENT.md  FIREBASE_AUTH_SETUP.md  GITHUB_SETUP.md  GOOGLE_CLOUD_SETUP.md  INFRASTRUCTURE_AS_CODE.md  MCP_SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: index.css
frontend/src/components/: FileUpload.tsx  JobList.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: firebase.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
src/ocr_perfect/: __init__.py  __main__.py  config.py
src/ocr_perfect/geometry/: __init__.py  bboxes.py  spaces.py  transforms.py
src/ocr_perfect/ir/: __init__.py  models.py  ordering.py  provenance.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_bboxes.py  test_config.py  test_ir_models.py  test_transforms.py
